--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -20,7 +20,7 @@
 name: Build and deploy ASP.Net Core app to an Azure Web App
 defaults:
   run:
-    working-directory: ./WebApplication1/WebApplication1.sln
+    working-directory: /home/runner/work/GitHubPOC/GitHubPOC
 env:
   AZURE_WEBAPP_NAME: GitHubPOC    # set this to the name of your Azure Web App
   AZURE_WEBAPP_PACKAGE_PATH: './WebApplication1/WebApplication1.sln'      # set this to the path to your web app project, defaults to the repository root
